--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,21 +3,9 @@
 
 <div class="row">
   <div class="span6 offset3">
+    <% # error message handling is located in the _fields partial %>
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-    
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.text_field :email %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
-
+      <%= render 'fields', f: f %>
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
