--- a/app/views/static_pages/_unsigned_in_home.html.erb
+++ b/app/views/static_pages/_unsigned_in_home.html.erb
@@ -1,5 +1,5 @@
 <div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to Harry Moreno's </br> Sample App!</h1>
 
   <h2>
     This is the home page for the
